work/ch10/ex02/flask-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-flask
spec:
  replicas: 3
  selector: 
    matchLabels:
      app.kubernetes.io/name: flask-web-deploy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flask-web-deploy
    spec:
      containers:
      - name: nginx-f
        image: lonlee/mynginxf_ch10:0.3
        ports:
        - containerPort: 80
        
      - name: flask-web
        image: lonlee/myflask_ch10:0.2
        ports:
        - containerPort: 8001
